Password er hashed nu, og employee er også blivet lavet nu.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=BarberBookingSystemBackend
-app.api-key=${SECRET_KEY}
+app.api-key=GZ0BDdM4P/y2Ao8fnrtKGZGL2pSUUrFGB+Sq4TliZpg=
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:barberdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.security.user.name=test
+spring.security.user.password=test1
