Bookinger er også fikset nu, det meste backend er på vej til at blive færdig. Nu mangler vi bare at kunne inkludere at sende mails og beskeder til kunder hvor de har mulighed for at sætte det ind i deres egen kalender hvis det ønskes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.security.user.name=test
 spring.security.user.password=test1
+
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=92ee9539b500f7
+spring.mail.password=789ddf43b8501e
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
